--- a/src/conponents/NavBar/NavBar.scss
+++ b/src/conponents/NavBar/NavBar.scss
@@ -1,10 +1,39 @@
-@import "../../../node_modules/bootstrap/scss/functions";
-@import "../../../node_modules/bootstrap/scss/variables";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+#logo{
+    font-size: clamp(2rem, 5vw, 3.5rem);
+}
 
-$custom_theme_colors : (
-    'maini': #ffb49a,
-);
-
-$theme_colors: map-merge($custom_theme_colors, $theme_colors);
-
-@import '../../../node_modules/bootstrap/scss/bootstrap.scss'
+#navbar-search-input{
+border: 0px;
+outline: none;
+border-bottom: 1px solid var(--bs-gray);
+}
+#nav-cart{
+    display: flex;
+    div {
+        cursor: pointer;
+        position: relative;
+        display: flex;
+        align-items: center;
+        width: 20px;
+        height: 20px;
+        .cart-icon {
+            font-size: 24px;
+        }
+        .icon-badge {
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: red;
+            height: 20px;
+            width: 20px;
+            border-radius: 50%;
+            top:-15px;
+            right:-15px;
+            font-size: 12px;
+            color: white;
+            font-weight: 600;
+        }
+    }
+}
