--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
+@import url(https://fonts.googleapis.com/css2?family=Oregano);
+$oregano: 'Oregano', serif;
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    font-family: 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -10,13 +12,6 @@ body {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
   }
-@import "../node_modules/bootstrap/scss/functions";
-@import "../node_modules/bootstrap/scss/variables";
-
-$custom_theme_colors : (
-    'maini': #ffb49a,
-);
-
-$theme_colors: map-merge($custom_theme_colors, $theme_colors);
-
-@import '../node_modules/bootstrap/scss/bootstrap.scss'
+.oregano {
+  font-family: $oregano;
+}
